# hb-server

./: .gitignore  CMakeLists.txt  DMCv1.py  DMCv2.py  Doxyfile  LICENSE  Makefile  README.md  SSL.md  Schets.py  db.sql  draw.c  erd.gv  herbankdb_v3.sql  herbankdbv2.sql  kbp.h  kech.gv  kech.h  kech.sql  main.c  main.py  menu.c  pymysql.py  rm.md  server.gv  session.c
doc/: ERD.drawio  Schematic.drawio  data_flow_diagram.drawio  kbp.tex  security-overview.drawio
doc/security/: main.tex
server/: kbp.h  main.c
src/: accounts.c  balance.c  hbp.h  herbank.h  iban.c  info.c  kbp.h  kech.h  login.c  main.c  noob.c  pin_update.c  session.c  transactions.c  transfer.c  utils.c
tools/: iban.c
